# cell-grid

./: CHANGELOG.md  Cargo.toml  README.md  deny.toml  justfile  release.toml
.github/workflows/: check.yml
src/: coord.rs  dynamic.rs  lib.rs  rect.rs
src/legacy/: coord.rs  mod.rs  rect.rs
tests/: dynamic_spec.rs  legacy_spec.rs  spec.rs
