[package]
name = "cell-grid"
version = "0.1.1"
license = "Unlicense"
authors = ["Jonathan Cornaz"]
edition = "2021"
rust-version = "1.74"
repository = "https://github.com/jcornaz/cell-grid"
description = "A simple fixed-size 2d grid container suitable for `no_std` game development"
categories = ["data-structures"]
keywords = ["2d", "grid", "data-structure", "matrix", "no_std"]

[badges.maintenance]
status = "actively-developed"

[badges.maintenance]
status = "actively-developed"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["std"]
std = []
aline-v01 = ["dep:aline-v01"]

[dependencies]
aline-v01 = { package = "aline", version = "0.1.3", default-features = false, optional = true }

[dev-dependencies]
rstest = { version = "0.18.2", default-features = false }

[lints.rust]
future_incompatible = "deny"
nonstandard_style = "deny"
unsafe_code = "deny"
private_interfaces = "warn"
private_bounds = "warn"
rust_2018_idioms = "warn"
missing_docs = "warn"

[lints.clippy]
exhaustive_enums = "warn"
exhaustive_structs = "warn"
pedantic = "warn"
