[package]
name = "cell-grid"
version = "0.1.2"
license = "Unlicense"
authors = ["Jonathan Cornaz"]
edition = "2021"
rust-version = "1.60"
repository = "https://github.com/jcornaz/cell-grid"
description = "A simple fixed-size 2d grid container suitable for `no_std` game development"
categories = ["data-structures"]
keywords = ["2d", "grid", "data-structure", "matrix", "no_std"]

[badges.maintenance]
status = "actively-developed"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["std"]
std = []

[dependencies]
aline = { package = "aline", version = "1", default-features = false, optional = true }

[dev-dependencies]
rstest = { version = "0.23", default-features = false }

[lints.rust]
unsafe_code = "deny"
private_interfaces = "warn"
private_bounds = "warn"
missing_docs = "warn"

[lints.clippy]
exhaustive_enums = "warn"
exhaustive_structs = "warn"
pedantic = { level = "warn", priority = -1 }
