[package]
name = "cell-grid"
version = "0.1.5"
license = "Unlicense"
authors = ["Jonathan Cornaz"]
edition = "2021"
rust-version = "1.60"
repository = "https://github.com/jcornaz/cell-grid"
description = "A simple 2d grid container"
categories = ["data-structures"]
keywords = ["2d", "grid", "data-structure", "matrix", "no_std"]

[badges.maintenance]
status = "actively-developed"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["std"]
std = []
aline = ["dep:aline"]
aline-v01 = ["aline"]

[dependencies]
aline = { package = "aline", version = "1", default-features = false, optional = true }
rustversion = "1"

[dev-dependencies]
rstest = { version = "0.18", default-features = false }

[lints.rust]
unsafe_code = "deny"
private_interfaces = "warn"
private_bounds = "warn"
missing_docs = "warn"

[lints.clippy]
exhaustive_enums = "warn"
exhaustive_structs = "warn"
pedantic = { level = "warn", priority = -1 }
